default/objects/Conversation_Log__c/Conversation_Log__c.object-meta.xml
<CustomObject>
    <label>Conversation Log</label>
    <nameField>
        <label>Conversation Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>